--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,90 @@
-.activ{
-	width: 13px;
-	height: 13px;
-	border-radius: 50%;
-	border:1px solid;
-	
+html{
+	font-size: 62.5%;
+}
+body{
+	font-size: 1.4rem;
+	margin:0;
+	padding: 0;
 }
 
-.hard{
-	width: 13px;
-	height: 13px;
-	border-radius: 50%;
-	border:1px solid;
-	background-color: red;
+header{
+	display: flex;
+	padding:2rem;
+	justify-content: space-between;
+	background-color: black;
+	color: white;
 }
+
+.btn-header{
+	background-color: black;
+	color: white;
+}
+
+.logo img{
+	vertical-align: middle;
+}
+
+.spanheader{
+	font-family: sans-serif;
+	font-size: 1.2em;
+}
+
+.string-header{
+	display: flex;
+	vertical-align: middle;
+	justify-content: space-between;
+}
+
+.section-1{
+	background-image: url(../../img/images.jpeg);
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	height: 50em;
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	align-items: center;
+	box-shadow: inset 0 0 2em white, 0 0 3em grey;
+}
+
+.section-1 h2{
+	margin-top:7em;
+	padding: 0;
+	color:whitesmoke;
+	font-size: 4rem;
+	text-shadow: 0 6px 3px black;
+	font-family: sans-serif;
+}
+
+.section-2{
+
+}
+
+.section-2 h2{
+
+}
+.btn-go{
+	align-content: flex-end;
+	box-shadow: 0 0 2em black;
+}
+
+footer{
+	height: 4em;
+	border: 1em solid black;
+	background-color: black;
+	color: white;
+	text-align: center;
+	font-size: 1rem;
+	font-family: sans-serif;
+}
+
+
+.simplon-war{
+	background-color: black;
+	color: white;
+}
+
+
+
