--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,86 @@ header{
 }
 
 .section-2{
+	background-color: rgba(20, 44, 47);
+	color: white;
+}
 
+.section-2 h2{
+	text-align: center;
+	margin-top: 3rem;
+}
+
+.display-inlab input{
+	border-radius: 0;
+	border: 1px solid black;
+	box-shadow: inset 0 0 2em white, 0 0 3em rgba(172, 115, 127);
+	/* 172 115 127 */
+}
+
+.display-inlab select{
+	border-radius: 0;
+	border: 1px solid black;
+}
+
+.border-equipe{
+	border: 0.1rem solid white;
+	width: 3.5rem;
+	margin-left: auto;
+ 	margin-right: auto;
+}
+
+.display-form{
+	display: flex;
+	justify-content: space-around;
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+}
+
+.display-inlabf{
+	display: flex;
+}
+
+.display-inlab{
+	display: flex;
+	flex-direction: column;
+	/* margin-right: 1.5rem; */
+}
+
+.txt-btn{
+	display: flex;
+	justify-content: space-between;
+	margin-top: 5rem;
+	padding-bottom: 3rem;
+	margin-right: 12.5%;
+	margin-left: 12.5%;
+}
+
+.txt-btn p{
+	font-size: 1.1rem;
+}
+
+.btn-sub{
+	border-radius: 0;
+	border: 1px solid white;
+	height: 3rem;
+	background-color: black;
+	color: white;
+	box-shadow: inset 0 0 1em white, 0 0 2em grey;
+}
+
+.baniere{
+	background-image: url('../../img/banniere1.jpg');
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: top;
+	background-attachment: fixed;
+
+	height: 21rem;
+	box-shadow: inset 0 0 2em white, 0 0 3em grey;
+
+	/* width:100%;
+  	height:100%; */
+  	/* display:block; */
 }
 
 .section-2 h2{
@@ -67,7 +146,13 @@ header{
 }
 .btn-go{
 	align-content: flex-end;
-	box-shadow: 0 0 2em black;
+	border-radius: 0;
+	border: 1px solid white;
+	height: 5rem;
+	margin-top: 4rem;
+	background-color: black;
+	color: white;
+	box-shadow: inset 0 0 1em white, 0 0 2em grey;
 }
 
 footer{
