--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ header{
 .btn-header{
 	background-color: black;
 	color: white;
+	height: 5rem;
 }
 
 .logo img{
@@ -52,7 +53,7 @@ header{
 .section-1 h2{
 	margin-top:7em;
 	padding: 0;
-	color:whitesmoke;
+	color:white;
 	font-size: 4rem;
 	text-shadow: 0 6px 3px black;
 	font-family: sans-serif;
@@ -61,18 +62,20 @@ header{
 .section-2{
 	background-color: rgba(20, 44, 47);
 	color: white;
+	font-family: sans-serif;
+	text-shadow: 0 6px 3px black;
 }
 
 .section-2 h2{
 	text-align: center;
 	margin-top: 3rem;
+	/* text-shadow: 0 6px 3px black; */
 }
 
 .display-inlab input{
 	border-radius: 0;
 	border: 1px solid black;
 	box-shadow: inset 0 0 2em white, 0 0 3em rgba(172, 115, 127);
-	/* 172 115 127 */
 }
 
 .display-inlab select{
