--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ html{
 	font-size: 62.5%;
 }
 body{
+	/* background-image: url('../../img/neige.gif'); */
+	/* background-size: cover; */
 	font-size: 1.4rem;
 	margin:0;
 	padding: 0;
@@ -16,13 +18,30 @@ header{
 }
 
 .btn-header{
-	background-color: black;
+	background-color: rgba(20, 44, 47);
 	color: white;
 	height: 5rem;
+	border: 1px solid white;
+
 }
 
 .logo img{
 	vertical-align: middle;
+	-moz-transition-duration:0.7s;
+	-moz-transition-timing-function: ease;
+	-webkit-transition-duration:0.7s;
+	-webkit-transition-timing-function:ease;
+	transition-duration:0.7s;
+	transition-timing-function:ease;
+	/* -webkit-animation:spin 4s linear infinite;
+	-moz-animation:spin 4s linear infinite;
+	animation:spin 4s linear infinite; */
+}
+
+.logo img:hover{
+	-moz-transform:rotate(360deg);
+	-webkit-transform:rotate(360deg);
+	transform:rotate(360deg);
 }
 
 .spanheader{
@@ -37,7 +56,7 @@ header{
 }
 
 .section-1{
-	background-image: url(../../img/images.jpeg);
+	background-image: url('../../img/neige.gif'), url('../../img/images.jpeg');
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -64,6 +83,19 @@ header{
 	color: white;
 	font-family: sans-serif;
 	text-shadow: 0 6px 3px black;
+}
+
+.section-2 label{
+
+}
+
+.section-2 input{
+	height: 2.5rem;
+}
+
+.section-2 select{
+	height: 3rem;
+	width: 12rem;
 }
 
 .section-2 h2{
@@ -156,6 +188,95 @@ header{
 	background-color: black;
 	color: white;
 	box-shadow: inset 0 0 1em white, 0 0 2em grey;
+}
+
+.img-heros-monsters{
+	display: flex;
+	justify-content: space-around;
+	margin-top: 2rem;
+}
+
+.heros{
+	display: flex;
+}
+
+.monsters{
+	display: flex;
+}
+
+.img{
+	margin: 1rem;
+	border: 0.1rem solid rgb(255,215,0);
+	box-shadow: inset 0 0 2em rgba(100, 100, 100, 0), 0 0 3em rgb(255,215,0);
+	border-radius: 1.5rem;
+	width: 10rem;
+	height: 12rem;
+}
+
+.img-magicien{
+	background-image: url('../../img/carte/magicien.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+	
+	
+}
+
+.img-elf{
+	background-image: url('../../img/carte/elfe.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+.img-guerrier{
+	background-image: url('../../img/carte/guerrier.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+.img-nain{
+	background-image: url('../../img/carte/nain.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+.img-magenoir{
+	background-image: url('../../img/carte/magenoir.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+.img-orc{
+	background-image: url('../../img/carte/orc.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+.img-gobelin{
+	background-image: url('../../img/carte/gobelin.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+.img-ombrenoir{
+	background-image: url('../../img/carte/ombrenoir.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+.img-sauron{
+	background-image: url('../../img/carte/sauron.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+.section-3{
+	background-image: url('../../img/battle.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+	/* background-position: center; */
+	background-attachment: fixed;
+	box-shadow: inset 0 0 2em red, 0 0 3em red;
+	height: 50em;
 }
 
 footer{
